# solar_frame_arduino

./: CMakeLists.txt  README.md
Arduino/sketch_feb28a/: sketch_feb28a.ino
Azande_Studio_1_0_0_4/Application Files/Azande Studio_1_0_0_4/: Azande Studio.application  Azande Studio.exe.config.deploy  Azande Studio.exe.deploy  Azande Studio.exe.manifest  iconApplication.ico.deploy
Azande_Studio_1_0_0_4/Application Files/Azande Studio_1_0_0_4/Features/Logging/LogFiles/: Feature Log.xml.deploy
Azande_Studio_1_0_0_4/Application Files/Azande Studio_1_0_0_4/Resources/ButtonImages/: imgGeneralCopyToClipBoard.png.deploy  imgGeneralPause.png.deploy  imgGeneralResume.png.deploy  imgMainBtnAddConnection.png.deploy  imgMainBtnModeEdit.png.deploy  imgMainBtnModeRun.png.deploy  imgMainBtnOpenLogWindow.png.deploy  imgMainBtnRefreshFeatures.png.deploy  imgTileRowTopLeft.png.deploy
Azande_Studio_1_0_0_4/Application Files/Azande Studio_1_0_0_4/Resources/Images/: imgBluetooth.png.deploy  imgBluetoothConnected.png.deploy  imgBluetoothConnecting.png.deploy  imgBluetoothDisconnected.png.deploy  imgBluetoothError.png.deploy  imgComPort.png.deploy  imgComPortConnected.png.deploy  imgComPortConnecting.png.deploy  imgComPortDisconnected.png.deploy  imgComPortError.png.deploy
Azande_Studio_1_0_0_4/eula_azandestudio_package/en/: eula_azandestudio.txt
Solar_Arduino_Sketches/Alt_motor_test/: Alt_motor_test.ino  _1_Azande.ino  motors.cpp  motors.h
Solar_Arduino_Sketches/Both_Motors_Test_no_deadman/: Both_Motors_Test_no_deadman.ino  _1_Azande.ino  _2_MotorFunctions.ino  _3_CurrentSafety.ino  motors.cpp  motors.h  sensors.cpp  sensors.h
Solar_Arduino_Sketches/Solar_arduino/: Solar_arduino.ino  _1_Azande.ino  _2_Movement.ino  motors.cpp  motors.h  sensors.cpp  sensors.h
Solar_Arduino_Sketches/docs/: System_Diagram.docx
Solar_Arduino_Sketches/imu_test/: imu_test.ino
Solar_Arduino_Sketches/master/: Solar_arduino.ino  cs_interface.cpp  cs_interface.h
Solar_Arduino_Sketches/master/src/: cs_interface.h
Solar_Arduino_Sketches/rotary_encoder_test/: rotary_encoder_test.ino
Solar_arduino/: Solar_arduino.ino
